; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_pipe.c_mac_pipe_check_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_pipe.c_mac_pipe_check_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.pipepair = type { i32, i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@pipe_check_write = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_pipe_check_write(%struct.ucred* %0, %struct.pipepair* %1) #0 {
  %3 = alloca %struct.ucred*, align 8
  %4 = alloca %struct.pipepair*, align 8
  %5 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %3, align 8
  store %struct.pipepair* %1, %struct.pipepair** %4, align 8
  %6 = load %struct.pipepair*, %struct.pipepair** %4, align 8
  %7 = getelementptr inbounds %struct.pipepair, %struct.pipepair* %6, i32 0, i32 1
  %8 = load i32, i32* @MA_OWNED, align 4
  %9 = call i32 @mtx_assert(i32* %7, i32 %8)
  %10 = load i32, i32* @pipe_check_write, align 4
  %11 = load %struct.ucred*, %struct.ucred** %3, align 8
  %12 = load %struct.pipepair*, %struct.pipepair** %4, align 8
  %13 = load %struct.pipepair*, %struct.pipepair** %4, align 8
  %14 = getelementptr inbounds %struct.pipepair, %struct.pipepair* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @MAC_POLICY_CHECK_NOSLEEP(i32 %10, %struct.ucred* %11, %struct.pipepair* %12, i32 %15)
  %17 = load i32, i32* @pipe_check_write, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load %struct.ucred*, %struct.ucred** %3, align 8
  %20 = load %struct.pipepair*, %struct.pipepair** %4, align 8
  %21 = call i32 @MAC_CHECK_PROBE2(i32 %17, i32 %18, %struct.ucred* %19, %struct.pipepair* %20)
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @MAC_POLICY_CHECK_NOSLEEP(i32, %struct.ucred*, %struct.pipepair*, i32) #1

declare dso_local i32 @MAC_CHECK_PROBE2(i32, i32, %struct.ucred*, %struct.pipepair*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
